fixes for : http://jira.jboss.org/jira/browse/JBIDE-759 http://jira.jboss.org/jira/browse/JBIDE-351
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@3508 a97e2381-89e5-4abb-bab3-167db6db766c